.metadata/.plugins/org.eclipse.cdt.ui/peripheralUSART.build.log
22:16:30 **** Build of configuration Debug for project peripheralUSART ****
make clean all 
rm -rf ./Startup/startup_stm32f411retx.d ./Startup/startup_stm32f411retx.o
rm -rf ./Src/main.d ./Src/main.o ./Src/main.su ./Src/syscalls.d ./Src/syscalls.o ./Src/syscalls.su ./Src/sysmem.d ./Src/sysmem.o ./Src/sysmem.su
rm -rf ./Drivers/Src/BasicTimer.d ./Drivers/Src/BasicTimer.o ./Drivers/Src/BasicTimer.su ./Drivers/Src/ExtiDriver.d ./Drivers/Src/ExtiDriver.o ./Drivers/Src/ExtiDriver.su ./Drivers/Src/GPIOxDriver.d ./Drivers/Src/GPIOxDriver.o ./Drivers/Src/GPIOxDriver.su ./Drivers/Src/USARTxDriver.d ./Drivers/Src/USARTxDriver.o ./Drivers/Src/USARTxDriver.su
rm -rf default.size.stdout peripheralUSART.elf peripheralUSART.list peripheralUSART.map
 
arm-none-eabi-gcc -mcpu=cortex-m4 -g3 -DDEBUG -c -x assembler-with-cpp -MMD -MP -MF"Startup/startup_stm32f411retx.d" -MT"Startup/startup_stm32f411retx.o" --specs=nano.specs -mfloat-abi=soft -mthumb -o "Startup/startup_stm32f411retx.o" "../Startup/startup_stm32f411retx.s"
arm-none-eabi-gcc "../Src/main.c" -mcpu=cortex-m4 -std=gnu11 -g3 -DDEBUG -DNUCLEO_F411RE -DSTM32 -DSTM32F4 -DSTM32F411RETx -DSTM32F411xE -c -I../Inc -I"/home/santiago/Documentos/GitHub/TallerV_01_2023/mcu_headers/CMSIS/Include" -I"/home/santiago/Documentos/GitHub/TallerV_01_2023/mcu_headers/CMSIS/Device/ST/STM32F4xx/Include" -I"/home/santiago/Documentos/GitHub/TallerV_01_2023/peripheralUSART/Drivers/Inc" -O0 -ffunction-sections -fdata-sections -Wall -fstack-usage -MMD -MP -MF"Src/main.d" -MT"Src/main.o" --specs=nano.specs -mfloat-abi=soft -mthumb -o "Src/main.o"
arm-none-eabi-gcc "../Src/syscalls.c" -mcpu=cortex-m4 -std=gnu11 -g3 -DDEBUG -DNUCLEO_F411RE -DSTM32 -DSTM32F4 -DSTM32F411RETx -DSTM32F411xE -c -I../Inc -I"/home/santiago/Documentos/GitHub/TallerV_01_2023/mcu_headers/CMSIS/Include" -I"/home/santiago/Documentos/GitHub/TallerV_01_2023/mcu_headers/CMSIS/Device/ST/STM32F4xx/Include" -I"/home/santiago/Documentos/GitHub/TallerV_01_2023/peripheralUSART/Drivers/Inc" -O0 -ffunction-sections -fdata-sections -Wall -fstack-usage -MMD -MP -MF"Src/syscalls.d" -MT"Src/syscalls.o" --specs=nano.specs -mfloat-abi=soft -mthumb -o "Src/syscalls.o"
arm-none-eabi-gcc "../Src/sysmem.c" -mcpu=cortex-m4 -std=gnu11 -g3 -DDEBUG -DNUCLEO_F411RE -DSTM32 -DSTM32F4 -DSTM32F411RETx -DSTM32F411xE -c -I../Inc -I"/home/santiago/Documentos/GitHub/TallerV_01_2023/mcu_headers/CMSIS/Include" -I"/home/santiago/Documentos/GitHub/TallerV_01_2023/mcu_headers/CMSIS/Device/ST/STM32F4xx/Include" -I"/home/santiago/Documentos/GitHub/TallerV_01_2023/peripheralUSART/Drivers/Inc" -O0 -ffunction-sections -fdata-sections -Wall -fstack-usage -MMD -MP -MF"Src/sysmem.d" -MT"Src/sysmem.o" --specs=nano.specs -mfloat-abi=soft -mthumb -o "Src/sysmem.o"
arm-none-eabi-gcc "../Drivers/Src/BasicTimer.c" -mcpu=cortex-m4 -std=gnu11 -g3 -DDEBUG -DNUCLEO_F411RE -DSTM32 -DSTM32F4 -DSTM32F411RETx -DSTM32F411xE -c -I../Inc -I"/home/santiago/Documentos/GitHub/TallerV_01_2023/mcu_headers/CMSIS/Include" -I"/home/santiago/Documentos/GitHub/TallerV_01_2023/mcu_headers/CMSIS/Device/ST/STM32F4xx/Include" -I"/home/santiago/Documentos/GitHub/TallerV_01_2023/peripheralUSART/Drivers/Inc" -O0 -ffunction-sections -fdata-sections -Wall -fstack-usage -MMD -MP -MF"Drivers/Src/BasicTimer.d" -MT"Drivers/Src/BasicTimer.o" --specs=nano.specs -mfloat-abi=soft -mthumb -o "Drivers/Src/BasicTimer.o"
arm-none-eabi-gcc "../Drivers/Src/ExtiDriver.c" -mcpu=cortex-m4 -std=gnu11 -g3 -DDEBUG -DNUCLEO_F411RE -DSTM32 -DSTM32F4 -DSTM32F411RETx -DSTM32F411xE -c -I../Inc -I"/home/santiago/Documentos/GitHub/TallerV_01_2023/mcu_headers/CMSIS/Include" -I"/home/santiago/Documentos/GitHub/TallerV_01_2023/mcu_headers/CMSIS/Device/ST/STM32F4xx/Include" -I"/home/santiago/Documentos/GitHub/TallerV_01_2023/peripheralUSART/Drivers/Inc" -O0 -ffunction-sections -fdata-sections -Wall -fstack-usage -MMD -MP -MF"Drivers/Src/ExtiDriver.d" -MT"Drivers/Src/ExtiDriver.o" --specs=nano.specs -mfloat-abi=soft -mthumb -o "Drivers/Src/ExtiDriver.o"
arm-none-eabi-gcc "../Drivers/Src/GPIOxDriver.c" -mcpu=cortex-m4 -std=gnu11 -g3 -DDEBUG -DNUCLEO_F411RE -DSTM32 -DSTM32F4 -DSTM32F411RETx -DSTM32F411xE -c -I../Inc -I"/home/santiago/Documentos/GitHub/TallerV_01_2023/mcu_headers/CMSIS/Include" -I"/home/santiago/Documentos/GitHub/TallerV_01_2023/mcu_headers/CMSIS/Device/ST/STM32F4xx/Include" -I"/home/santiago/Documentos/GitHub/TallerV_01_2023/peripheralUSART/Drivers/Inc" -O0 -ffunction-sections -fdata-sections -Wall -fstack-usage -MMD -MP -MF"Drivers/Src/GPIOxDriver.d" -MT"Drivers/Src/GPIOxDriver.o" --specs=nano.specs -mfloat-abi=soft -mthumb -o "Drivers/Src/GPIOxDriver.o"
arm-none-eabi-gcc "../Drivers/Src/USARTxDriver.c" -mcpu=cortex-m4 -std=gnu11 -g3 -DDEBUG -DNUCLEO_F411RE -DSTM32 -DSTM32F4 -DSTM32F411RETx -DSTM32F411xE -c -I../Inc -I"/home/santiago/Documentos/GitHub/TallerV_01_2023/mcu_headers/CMSIS/Include" -I"/home/santiago/Documentos/GitHub/TallerV_01_2023/mcu_headers/CMSIS/Device/ST/STM32F4xx/Include" -I"/home/santiago/Documentos/GitHub/TallerV_01_2023/peripheralUSART/Drivers/Inc" -O0 -ffunction-sections -fdata-sections -Wall -fstack-usage -MMD -MP -MF"Drivers/Src/USARTxDriver.d" -MT"Drivers/Src/USARTxDriver.o" --specs=nano.specs -mfloat-abi=soft -mthumb -o "Drivers/Src/USARTxDriver.o"
../Drivers/Src/USARTxDriver.c: In function 'USART_Config':
../Drivers/Src/USARTxDriver.c:196:36: error: 'USART_Config_t' has no member named 'USART_enableIntRX'
  196 |   if (ptrUsartHandler->USART_Config.USART_enableIntRX == USART_RX_INTERRUPT_ENABLE) {
      |                                    ^
../Drivers/Src/USARTxDriver.c:196:58: error: 'USART_RX_INTERRUPT_ENABLE' undeclared (first use in this function)
  196 |   if (ptrUsartHandler->USART_Config.USART_enableIntRX == USART_RX_INTERRUPT_ENABLE) {
      |                                                          ^~~~~~~~~~~~~~~~~~~~~~~~~
../Drivers/Src/USARTxDriver.c:196:58: note: each undeclared identifier is reported only once for each function it appears in
../Drivers/Src/USARTxDriver.c:206:36: error: 'USART_Config_t' has no member named 'USART_enableIntRX'
  206 |   if (ptrUsartHandler->USART_Config.USART_enableIntRX == USART_RX_INTERRUPT_ENABLE) {
      |                                    ^
make: *** [Drivers/Src/subdir.mk:28: Drivers/Src/USARTxDriver.o] Error 1
"make clean all" terminated with exit code 2. Build might be incomplete.

22:16:30 Build Failed. 4 errors, 0 warnings. (took 816ms)

